# sm-tracker

./: .editorconfig  .env.example  .gitignore  .gitleaks.toml  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc  CHANGELOG.md  CHANGES.md  CONFIG_REFERENCE.md  FACEBOOK_SETUP_GUIDE.md  LICENSE  README.md  code-review-claude.md  config.toml  config.toml.example  mise.toml  package-lock.json  package.json  pyproject.toml  run_threads_auth.sh
.github/workflows/: ci.yml  release.yml
dev-docs/: 20250225-PLANS-sm-tracker-mvp.md  20250225-SPECS-sm-tracker-mvp.md  20260226-code-review-claude.md  20260227-PLANS-facebook-tracker.md  20260227-PLANS-youtube-adapter.md  20260227-SPECS-facebook-tracker.md  20260227-SPECS-instagram-graph-api.md  20260227-SPECS-youtube-adapter.md  20260228-code-review-antigravity.md  20260228-code-review-claude.md  plans.md  prd.md  specs.md
dev-docs/plan-progress/: 20260227-facebook-tracker.md  sm-tracker-mvp.md
docs/: CONFIG_REFERENCE.md  CREDENTIAL_SETUP_GUIDE.md
logs-dev/: sm-tracker.log.2026-02-26
scripts/: precommit-docs-fix.sh
src/sm_tracker/: __init__.py  __main__.py
src/sm_tracker/cli/: __init__.py  app.py  auth.py  config.py  formatters.py  history.py  options.py  show.py  track.py
src/sm_tracker/config/: __init__.py
src/sm_tracker/db/: __init__.py  connection.py  queries.py  schema.py
src/sm_tracker/logging/: __init__.py
tests/: test_db_layer.py  test_phase1_scaffold.py  test_phase2_logging.py  test_phase4_cli_skeleton.py  test_phase5_bluesky.py  test_phase6_facebook.py  test_phase6_farcaster.py  test_phase6_mastodon.py  test_phase6_threads.py  test_phase6_twitter.py  test_phase7_output_formatting.py  test_phase8_config_command.py  test_scaffold.py
tests/cli/: test_auth_command.py  test_cli_skeleton.py  test_config_command.py  test_formatters.py
tests/config/: test_config.py  test_logging.py
tests/db/: test_db_layer.py
tests/integration/: conftest.py  test_live_bluesky.py  test_live_facebook.py  test_live_farcaster.py  test_live_instagram.py  test_live_mastodon.py  test_live_meta_auth.py  test_live_threads.py  test_live_twitter.py  test_live_youtube.py
