[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "sm-tracker"
version = "0.1.2"
description = "CLI to track social media follower/following counts."
readme = "README.md"
authors = [{ name = "Flying Nobita" }]
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = [
    "analytics",
    "cli",
    "followers",
    "social-media",
    "tracking",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Utilities",
]
dependencies = [
    "atproto>=0.0.61",
    "libsql-client>=0.3.1",
    "Mastodon.py>=1.8.1",
    "meta-threads-sdk>=0.2.1",
    "python-dotenv>=1.0.1",
    "tweepy>=4.15.0",
    "typer>=0.16.0",
]

[project.urls]
Homepage = "https://github.com/flyingnobita/sm-tracker"
Repository = "https://github.com/flyingnobita/sm-tracker"
Issues = "https://github.com/flyingnobita/sm-tracker/issues"
Changelog = "https://github.com/flyingnobita/sm-tracker/blob/main/CHANGELOG.md"

[project.scripts]
sm-tracker = "sm_tracker.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/sm_tracker"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/.env.example",
    "/config.toml.example",
    "/docs",
    "/assets",
]
exclude = [
    "/.github",
    "/.gitignore",
    "/CHANGELOG.md",
    "/config.toml",
    "/dev-docs",
    "/dist",
    "/dist-clean",
    "/logs-dev",
    "/mise.toml",
    "/package-lock.json",
    "/package.json",
    "/scripts",
    "/tests",
    "/uv.lock",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.5.1",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["sm_tracker"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: live credential tests requiring real API access (run with: pytest -m integration)",
]
